--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,7 +26,7 @@
         </a>
 
         <nav class="desktop-nav">
-          <a href="#hero">Home</a>
+          <a href="#home">Home</a>
           <a href="#about">About</a>
           <a href="#pricing">Prices</a>
           <a href="#location">Location</a>
@@ -44,7 +43,7 @@
 
       <div id="mobile-menu" class="mobile-menu">
         <nav>
-          <a href="#hero">Home</a>
+          <a href="#home">Home</a>
           <a href="#about">About</a>
           <a href="#pricing">Prices</a>
           <a href="#location">Location</a>
@@ -52,15 +51,15 @@
       </div>
     </header>
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero">
-      <div class="hero-image">
-        <div class="hero-overlay"></div>
+    <!-- Home Section -->
+    <section id="home" class="home">
+      <div class="home-image">
+        <div class="home-overlay"></div>
       </div>
-      <div class="hero-content container">
+      <div class="home-content container">
         <h1>Perfect Your <span class="accent">Golf Swing</span> at Jim's Driving Range</h1>
         <p>Kitchener's premier driving range with 40 hitting mats and a relaxed atmosphere</p>
-        <div class="hero-buttons">
+        <div class="home-buttons">
           <a href="#pricing" class="btn btn-primary">View Pricing</a>
           <a href="#location" class="btn btn-secondary">Find Our Location</a>
         </div>
@@ -130,7 +129,7 @@
           </div>
           
           <div class="about-image">
-            <img src="public/lovable-uploads/b40a96a7-1e82-418b-986f-f6081a5407c1.png" alt="Jim's Driving Range entrance">
+            <img src="public/lovable-uploads/b40a96a7-1e82-418b-986f-f6081a5407c1.png" alt="Jim's Driving Range entrance" style="display: block; width: 100%; height: auto;">
           </div>
         </div>
       </div>
@@ -295,7 +294,7 @@
             <div class="footer-column">
               <h3>Quick Links</h3>
               <ul>
-                <li><a href="#hero">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#location">Location</a></li>
