--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Jim's Driving Range" />
     <meta property="og:image" content="public/lovable-uploads/b40a96a7-1e82-418b-986f-f6081a5407c1.png" />
     <meta property="og:title" content="Jim's Driving Range - Kitchener's Premier Golf Facility" />
-    <meta property="og:description" content="Practice your golf swing at Jim's Driving Range in Kitchener. Open daily from 9am to 8pm." />
+    <meta property="og:description" content="Practice your golf swing at Jim's Driving Range in Kitchener. Open daily from 9am to 7pm." />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -124,7 +124,7 @@
                 </svg>
               </div>
               <h3>Open Daily</h3>
-              <p>Available from 9am to 8pm, seven days a week</p>
+              <p>Available from 9am to 7pm, seven days a week</p>
             </div>
           </div>
           
@@ -146,7 +146,7 @@
         <div class="pricing-cards">
           <div class="pricing-card">
             <h3>Medium Bucket</h3>
-            <div class="price">$10</div>
+            <div class="price">$8</div>
             <p>Perfect for a quick practice session</p>
             <ul>
               <li>
@@ -173,7 +173,7 @@
           <div class="pricing-card popular">
             <div class="popular-tag">MOST POPULAR</div>
             <h3>Large Bucket</h3>
-            <div class="price">$15</div>
+            <div class="price">$10</div>
             <p>Our most popular option for serious practice</p>
             <ul>
               <li>
@@ -198,7 +198,7 @@
           </div>
         </div>
 
-        <p class="pricing-note">All buckets are available for walk-in customers. No reservations required.</p>
+        <p class="pricing-note">All buckets are available for walk-in customers. No reservations required. Extra $1 charge for debit/credit</p>
       </div>
     </section>
 
@@ -242,9 +242,9 @@
                 <h3>Hours</h3>
                 <div class="hours-grid">
                   <span>Monday - Sunday:</span>
-                  <span>9:00 AM - 8:00 PM</span>
+                  <span>9:00 AM - 7:00 PM</span>
                 </div>
-                <p class="hours-note">Last bucket sold at 8:00 PM. Walk-ins welcome.</p>
+                <p class="hours-note">Last bucket sold at 7:00 PM. Walk-ins welcome.</p>
               </div>
             </div>
 
@@ -308,7 +308,7 @@
                   Kitchener, ON N2P 2P5
                 </li>
                 <li>
-                  9:00 AM - 8:00 PM<br>
+                  9:00 AM - 7:00 PM<br>
                   7 days a week
                 </li>
               </ul>
