--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jim's Driving Range - Kitchener's Premier Golf Facility</title>
-    <meta name="description" content="Jim's Driving Range in Kitchener, Ontario offers 40 hitting mats and premium practice facilities. Visit us today to improve your golf game!" />
+    <meta name="description" content="Jim's Driving Range in Kitchener, Ontario offers 44 hitting mats and premium practice facilities. Visit us today to improve your golf game!" />
     <meta name="author" content="Jim's Driving Range" />
     <meta property="og:image" content="public/lovable-uploads/b40a96a7-1e82-418b-986f-f6081a5407c1.png" />
     <meta property="og:title" content="Jim's Driving Range - Kitchener's Premier Golf Facility" />
@@ -58,7 +58,7 @@
       </div>
       <div class="home-content container">
         <h1>Perfect Your <span class="accent">Golf Swing</span> at Jim's Driving Range</h1>
-        <p>Kitchener's premier driving range with 40 hitting mats and a relaxed atmosphere</p>
+        <p>Kitchener's premier driving range with 44 hitting mats and a relaxed atmosphere</p>
         <div class="home-buttons">
           <a href="#pricing" class="btn btn-primary">View Pricing</a>
           <a href="#location" class="btn btn-secondary">Find Our Location</a>
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Experience Jim's Driving Range</h2>
-          <p>For 15 years, we've been the go-to destination for golfers in Kitchener looking to improve their game in a relaxed environment.</p>
+          <p>For 10 years, we've been the go-to destination for golfers in Kitchener looking to improve their game in a relaxed environment.</p>
         </div>
 
         <div class="about-content">
@@ -92,7 +92,7 @@
                   <line x1="22" y1="15.5" x2="12" y2="8.5"></line>
                 </svg>
               </div>
-              <h3>40 Hitting Mats</h3>
+              <h3>44 Hitting Mats</h3>
               <p>Spacious setup with plenty of room for practice</p>
             </div>
             <div class="feature-card">
@@ -102,7 +102,7 @@
                   <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
                 </svg>
               </div>
-              <h3>15 Years Experience</h3>
+              <h3>10 Years Experience</h3>
               <p>Proudly serving the Kitchener community since 2009</p>
             </div>
             <div class="feature-card">
@@ -146,14 +146,14 @@
         <div class="pricing-cards">
           <div class="pricing-card">
             <h3>Medium Bucket</h3>
-            <div class="price">$8</div>
+            <div class="price">$5</div>
             <p>Perfect for a quick practice session</p>
             <ul>
               <li>
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <polyline points="20 6 9 17 4 12"></polyline>
                 </svg>
-                <span>Approx. 50 balls</span>
+                <span>Approx. 40 balls</span>
               </li>
               <li>
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -180,7 +180,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <polyline points="20 6 9 17 4 12"></polyline>
                 </svg>
-                <span>Approx. 100 balls</span>
+                <span>Approx. 90 balls</span>
               </li>
               <li>
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -198,7 +198,7 @@
           </div>
         </div>
 
-        <p class="pricing-note">All buckets are available for walk-in customers. No reservations required. Extra $1 charge for debit/credit</p>
+        <p class="pricing-note">All buckets are available for walk-in customers. No reservations required. Extra $2 charge for debit/credit</p>
       </div>
     </section>
 
@@ -286,7 +286,7 @@
               <span class="logo-text">Jim's Driving Range</span>
             </div>
             <p>
-              Providing the Kitchener community with a premium golf practice experience for over 15 years. Come visit us and improve your swing!
+              Providing the Kitchener community with a premium golf practice experience for over 10 years. Come visit us and improve your swing!
             </p>
           </div>
           
@@ -309,7 +309,7 @@
                 </li>
                 <li>
                   9:00 AM - 7:00 PM<br>
-                  7 days a week
+                  7 days a week, including holidays
                 </li>
               </ul>
             </div>
