--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
   </head>
 
   <body>
+    <!-- Announcement Banner -->
+    <div id="announcement-banner" style="display: none;" class="announcement-banner">
+      <div class="container">
+        <p id="announcement-text"></p>
+        <button onclick="closeAnnouncement()" class="close-banner">×</button>
+      </div>
+    </div>
+
     <!-- Header -->
     <header id="header">
       <div class="container">
