--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-YWEPW34Q2D"
+    src="https://www.googletagmanager.com/gtag/js?id=G-CJZT5VPL60"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -41,7 +41,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-YWEPW34Q2D");
+    gtag("config", "G-CJZT5VPL60");
   </script>
 
   <body>
