Update mat count

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jim's Driving Range - Kitchener's Premier Golf Facility</title>
     <meta
       name="description"
-      content="Jim's Driving Range in Kitchener, Ontario offers 44 hitting mats and premium practice facilities. Visit us today to improve your golf game!"
+      content="Jim's Driving Range in Kitchener, Ontario offers over 50 hitting mats and premium practice facilities. Visit us today to improve your golf game!"
     />
     <meta name="author" content="Jim's Driving Range" />
     <meta
@@ -114,7 +114,7 @@
           Range
         </h1>
         <p>
-          Kitchener's premier driving range with 44 hitting mats and a relaxed
+          Kitchener's premier driving range with over 50 hitting mats and a relaxed
           atmosphere
         </p>
         <div class="home-buttons">
@@ -175,7 +175,7 @@
                   <line x1="22" y1="15.5" x2="12" y2="8.5"></line>
                 </svg>
               </div>
-              <h3>44 Hitting Mats</h3>
+              <h3>Over 50 Hitting Mats</h3>
               <p>Spacious setup with plenty of room for practice</p>
             </div>
             <div class="feature-card">
