Update closing hour to 9pm

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:description"
-      content="Practice your golf swing at Jim's Driving Range in Kitchener. Open daily from 9am to 8pm."
+      content="Practice your golf swing at Jim's Driving Range in Kitchener. Open daily from 9am to 9pm. Gate closes at 10pm."
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link
@@ -239,7 +239,7 @@
                 </svg>
               </div>
               <h3>Open Daily</h3>
-              <p>Available from 9am to 8pm, seven days a week</p>
+              <p>Available from 9am to 9pm, seven days a week. Gate closes at 10pm</p>
             </div>
           </div>
 
@@ -474,10 +474,10 @@
                 <h3>Hours</h3>
                 <div class="hours-grid">
                   <span>Monday - Sunday:</span>
-                  <span>9:00 AM - 8:00 PM</span>
+                  <span>9:00 AM - 9:00 PM</span>
                 </div>
                 <p class="hours-note">
-                  Last bucket sold at 8:00 PM. Walk-ins welcome.
+                  Last bucket sold at 9:00 PM. Gate closes at 10:00 PM. Walk-ins welcome.
                 </p>
               </div>
             </div>
@@ -557,7 +557,8 @@
                   Kitchener, ON N2P 2P5
                 </li>
                 <li>
-                  9:00 AM - 8:00 PM<br />
+                  9:00 AM - 9:00 PM<br />
+                  Gate closes at 10:00 PM<br />
                   7 days a week, including holidays
                 </li>
               </ul>
