Remove last bucket and gates info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:description"
-      content="Practice your golf swing at Jim's Driving Range in Kitchener. Open daily from 9am to 8pm. Gate closes at 9pm."
+      content="Practice your golf swing at Jim's Driving Range in Kitchener. Open daily from 9am to 8pm."
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link
@@ -239,7 +239,7 @@
                 </svg>
               </div>
               <h3>Open Daily</h3>
-              <p>Available from 9am to 8pm, seven days a week. Gate closes at 9pm</p>
+              <p>Available from 9am to 8pm, seven days a week.</p>
             </div>
           </div>
 
@@ -477,7 +477,7 @@
                   <span>9:00 AM - 8:00 PM</span>
                 </div>
                 <p class="hours-note">
-                  Last bucket sold at 8:00 PM. Gate closes at 9:00 PM. Walk-ins welcome.
+                  Walk-ins welcome.
                 </p>
               </div>
             </div>
@@ -558,7 +558,6 @@
                 </li>
                 <li>
                   9:00 AM - 8:00 PM<br />
-                  Gate closes at 9:00 PM<br />
                   7 days a week, including holidays
                 </li>
               </ul>
