Added closed when dark

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                   <span>9:00 AM - 8:00 PM</span>
                 </div>
                 <p class="hours-note">
-                  Walk-ins welcome.
+                  We close when it gets dark. Walk-ins welcome.
                 </p>
               </div>
             </div>
